--- a/themes.scss
+++ b/themes.scss
@@ -1,10 +1,9 @@
 .themes {
     position: sticky;
-    margin-top: .5rem;
-    top: 2.5%;
-    display: flex;
-    margin-bottom: -1.8rem;
-    z-index: 99;
+    top: 5%;
+    z-index: 1;
+    width: 10%;
+    transform: translate(-85%, -5%);
 
     .container {
         position: relative;
