--- a/src/css/themes.scss
+++ b/src/css/themes.scss
@@ -1,29 +1,29 @@
-.themes {
+.theme {
     position: sticky;
-    top: 5%;
-    z-index: 1;
-    width: 10%;
-    transform: translate(-85%, -5%);
+    z-index: 10;
+    width: 100%;
 
-    .container {
+    & .theme-container {
         position: relative;
         padding: .1em;
-        width: 3em;
-        height: 2.8em;
+        width: 4em;
+        height: 3.8em;
         overflow: hidden;
         border-radius: 100%;
-        transition: opacity .5s ease-in-out;
+        transition: opacity .5s ease-in-out, box-shadow 1s 1s;
         opacity: .7;
+        transform: translateX(-50%);
 
-        .btn-theme {
-            img {
+        & .btn-theme {
+
+            & svg {
                 cursor: pointer;
                 position: absolute;
-                width: 80%;
+                width: 100%;
                 left: 50%;
                 top: 50%;
                 transform: translate(-50%, -50%);
-                transition: left 2s ease-in-out, box-shadow 1s 1s;
+                transition: left 2s ease-in-out;
                 border-radius: 100%;
             }
 
