--- a/src/css/themes.scss
+++ b/src/css/themes.scss
@@ -1,21 +1,22 @@
 .theme {
-    position: sticky;
+    position: fixed;
     z-index: 10;
-    width: 100%;
+    top: 30px;
+    //left: 0;
+    max-width: 3em;
 
     & .theme-container {
         position: relative;
-        padding: .1em;
-        width: 4em;
-        height: 3.8em;
-        overflow: hidden;
+        width: 3em;
+        height: 2.8em;
         border-radius: 100%;
-        transition: opacity .5s ease-in-out, box-shadow 1s 1s;
+        overflow: hidden;
+        transition: opacity .3s ease, box-shadow .5s ease;
         opacity: .7;
+        top: 0;
         transform: translateX(-50%);
 
         & .btn-theme {
-
             & svg {
                 cursor: pointer;
                 position: absolute;
@@ -23,18 +24,16 @@
                 left: 50%;
                 top: 50%;
                 transform: translate(-50%, -50%);
-                transition: left 2s ease-in-out;
+                transition: left 1s ease;
                 border-radius: 100%;
             }
 
-            :nth-child(2) {
+            & svg:nth-child(2) {
                 left: 150%;               
             }
 
-            &.active {
-                :nth-child(2) {
-                    left: 50%;
-                } 
+            &.active svg:nth-child(2) {
+                left: 50%;
             }
         }
         
@@ -42,42 +41,4 @@
             opacity: 1;
         }
     }
-  }
-
-
-@media screen and (min-width: 30em) {
-    .themes {
-        .container {
-            width: 4em;
-            height: 3.8em;
-        }
-    }
-    
-}
-@media screen and (min-width: 48em) {
-    .themes {
-        .container {
-            width: 5em;
-            height: 4.8em;
-        }
-    }
-    
-}
-@media screen and (min-width: 62em) {
-    .themes {
-        .container {
-            width: 6em;
-            height: 5.8em;
-        }
-    }
-    
-}
-@media screen and (min-width: 75em) {
-    .themes {
-        .container {
-            width: 7em;
-            height: 6.8em;
-        }
-    }
-    
-}
+ }
